samples/_failures_safe/1761075814_1fb78d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ca2a689.c: In function ‘main’:
./samples/SAFE/__tmp_0ca2a689.c:161: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0ca2a689.c:160:9: error: expected declaration or statement at end of input
  160 |         if
      |         ^~
./samples/SAFE/__tmp_0ca2a689.c:160:9: error: expected declaration or statement at end of input
